[tool.poetry]
name = "module-9"
version = "0.1.0"
description = ""
authors = ["Сергей Сытник <sytnikserhii22038@gmail.com>"]
readme = "README.md"
packages = [{include = "module_9"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"
psycopg2 = "^2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
